data/derived/fa15/progs/unify/prog1501.ml.out
Characters 63-64:
  let base = f 0 in
               ^
Error: This expression has type int but an expression was expected of type
         'a -> 'b
